--- a/作业/第十次作业/小米商城/xiaomi.html
+++ b/作业/第十次作业/小米商城/xiaomi.html
@@ -3,127 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <title>小米商城</title>
-    <style type="text/css">
-        *{
-            padding:0;
-            margin:0;
-        }
-        ul{
-            /*清除ul的默认样式*/
-            list-style: none;
+    <link rel="stylesheet" href="./css/index.css">
 
-        }
-        .topBar{
-            width:100%;
-            height:40px;
-            background-color:black;
-        }
-        .container{
-            width: 1226px;
-            /*height:40px;*/
-            /*background-color:yellow;*/
-            /*居中显示*/
-            margin: 0 auto;
-        }
-        .topBar-nav{
-            float:left;
-            width: 375px;
-            height: 40px;
-            background-color: red;
-        }
-        .user-info{
-            float: right;
-            width: 140px;
-            height: 40px;
-            background-color: #FC4B38;
-            margin-right: 15px;
-        }
-        .topBar-cart{
-            float:right;
-            width: 120px;
-            height: 40px;
-            background-color: green;
-        }
-        .header{
-            width: 100%;
-            height: 110px;
-        }
-        .logo{
-            float: left;
-            width: 62px;
-            height:55px;
-            background-color: #E766EA;
-        }
-        .nav{
-            float: left;
-            width:780px;
-            height: 110px;
-            background-color: yellow;
-        }
-        .search{
-            float: right;
-            width: 296px;
-            height: 50px;
-            background-color: purple;
-            margin-top: 25px;
-        }
-        .content{
-            width:1226px;
-            height:460px;
-            margin: 0 auto 14px;
-        }
-        .content-list{
-            float: left;
-            width:234px;
-            height:460px;
-            background-color: #1971FE;
-        }
-        .lunbo{
-            float: left;
-            width:992px;
-            height:460px;
-            background-color: #FD8008;
-        }
-        .shop{
-            width:1226px;
-            height: 170px;
-            margin:0 auto;
-            /*background-color: green;*/
-        }
-        .shop .channel{
-            width:234px;
-            height: 170px;
-            float: left;
-            background-color: #996633;
-        }
-        .shop .advertising{
-            width:992px;
-            height:170px;
-            /*background-color: red;*/
-            float: left;
-        }
-        .shop .advertising ul li{
-            float:left;
-            width:316px;
-            height:170px;
-            background-color: red;
-            margin-left: 14px;
-        }
-    </style>
 </head>
 <body>
     <div class="topBar">
         <div class="container">
-            <div class="topBar-nav">导航条</div>
-            <div class="topBar-cart">购物车</div>
-            <div class="user-info">用户登录</div>
+            <div class="topBar-nav">
+                <a href="https://www.mi.com/index.html" target="_blank">小米商城</a>
+                <span class="sep">|</span>
+                <a rel="nofollow" href="https://www.miui.com" target="_blank">MIUI</a>
+                <span class="sep">|</span>
+                <a href="https://i.mi.com" target="_blank">云服务</a>
+                <span class="sep">|</span>
+                <a href="https://jr.mi.com?from=micom" target="_blank">金融</a>
+                <span class="sep">|</span>
+                <a href="https://youpin.mi.com" target="_blank">有品</a>
+            </div>
+            <!--购物车-->
+            <div class="topBar-cart" id="J_miniCartrigger">
+                <a href="https://static.mi.com/cart/">购物车(0)</a>
+
+            <!--用户信息-->
+            </div>
+            <div class="user-info" id="J_userInfo">
+                <a href="https://account.xiaomi.com" target="_blank">登录</a>
+                <span class="sep">|</span>
+                <a href="https://account.xiaomi.com/pass/register" target="_blank">注册</a>
+            </div>
         </div>
     </div>
     <div class="header">
-        <div class="container"></div>
-            <div class="logo">logo</div>
-            <div class="nav">导航</div>
-            <div class="search">搜索框</div>
+        <div class="container">
+            <div class="header-logo">
+                <a href="#"><img class="logo1" src="./images/小米图标.jpg" alt="小米商城"></a>
+                <a href="#"><img class="log02" src="./images/米粉日.jpg"> </a>
+
+            </div>
+            </div>
+
+            <div class="header-nav">
+               <ul>
+                        <li><a href="#">小米手机</a>
+
+                        </li>
+
+                        <li><a href="#">红米手机</a>
+
+                        </li>
+                        <li><a href="#">电视</a>
+
+                        </li>
+                        <li><a href="#">笔记本</a>
+
+                        </li>
+                        <li><a href="#">盒子</a>
+
+                        </li>
+                        <li><a href="#">新品</a>
+
+                        </li>
+                        <li><a href="#">路由器</a>
+
+                        </li>
+                        <li><a href="#">智能硬件</a>
+
+                        </li>
+                        <li><a href="#">服务</a>
+
+                        </li>
+                        <li><a href="#">社区</a>
+
+               </ul>
+            </div>
+            <div class="header-search">
+                <form id="J_searchForm" class="search-form clearfix" action="//search.mi.com/search" method="get">
+                    <label for="search"></label>
+                    <input class="search-text" type="search" id="search" >
+                    <span class="search-hot-words">
+                        <a href="#">小米8</a>
+                        <a href="#">小米MIX 2S</a>
+                    </span>
+                    <input type="submit" class="search-btn iconfont" value="&#xe616;" />
+
+                </form>
+             </div>
+        </div>
+
     </div>
 
     <div class="content">
@@ -142,9 +108,9 @@
         </div>
         <div class="advertising">
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>手机</li>
+                <li>运动手表</li>
+                <li>小米音响</li>
             </ul>
         </div>
     </div>
