--- a/作业/第十次作业/小米商城/xiaomi.html
+++ b/作业/第十次作业/小米商城/xiaomi.html
@@ -36,7 +36,9 @@
     <div class="header">
         <div class="container">
             <div class="header-logo">
-                <a href="#"><img class="logo1" src="./images/小米图标.jpg" alt="小米商城"></a>
+                <a href="#">
+                    <img class="logo1" src="./images/小米图标.jpg" alt="小米商城">
+                </a>
                 <a href="#"><img class="log02" src="./images/米粉日.jpg"> </a>
 
             </div>
@@ -44,47 +46,59 @@
 
             <div class="header-nav">
                <ul>
-                        <li><a href="#">小米手机</a>
+                    <li>
+                        <a href="#" >小米手机</a>
 
-                        </li>
 
-                        <li><a href="#">红米手机</a>
+                    </li>
 
-                        </li>
-                        <li><a href="#">电视</a>
+                    <li>
+                        <a href="#">红米手机</a>
 
-                        </li>
-                        <li><a href="#">笔记本</a>
+                    </li>
+                    <li>
+                        <a href="#">电视</a>
 
-                        </li>
-                        <li><a href="#">盒子</a>
+                    </li>
+                    <li>
+                        <a href="#">笔记本</a>
 
-                        </li>
-                        <li><a href="#">新品</a>
+                    </li>
+                    <li>
+                        <a href="#">盒子</a>
 
-                        </li>
-                        <li><a href="#">路由器</a>
+                    </li>
+                    <li>
+                        <a href="#">新品</a>
 
-                        </li>
-                        <li><a href="#">智能硬件</a>
+                    </li>
+                    <li>
+                        <a href="#">路由器</a>
 
-                        </li>
-                        <li><a href="#">服务</a>
+                    </li>
+                    <li>
+                        <a href="#">智能硬件</a>
 
-                        </li>
-                        <li><a href="#">社区</a>
+                    </li>
+                    <li>
+                        <a href="#">服务</a>
+
+                    </li>
+                    <li>
+                        <a href="#">社区</a>
+                    </li>
 
                </ul>
             </div>
             <div class="header-search">
-                <form id="J_searchForm" class="search-form clearfix" action="//search.mi.com/search" method="get">
+                <form  action="//search.mi.com/search" method="get">
                     <label for="search"></label>
-                    <input class="search-text" type="search" id="search" >
-                    <span class="search-hot-words">
+                    <input name="search" type="text" id="search" >
+                    <span class="hot-words">
                         <a href="#">小米8</a>
                         <a href="#">小米MIX 2S</a>
                     </span>
-                    <input type="submit" class="search-btn iconfont" value="&#xe616;" />
+                    <input type="submit" id="submit" value="" />
 
                 </form>
              </div>
@@ -95,22 +109,114 @@
     <div class="content">
         <!--内容选择列表-->
         <div class="content-list">
+            <div class="content-up">
+                <div class="up-1">
+                    <ul>
+                        <li>
+                            <a href="#">手机&nbsp;电话卡</a><span>&gt;</span>
+                            <div>
+                                <ul>
+                                    <li>
+                                        <span></span>
+                                        小米手机
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li><a href="#">电视&nbsp;盒子</a><span>&gt;</span>
+                        </li>
+                        <li>
+                            <li><a href="#">笔记本&nbsp;平板</a><span>&gt;</span>
+                        </li>
+                         <li>
+                             <li><a href="#">家电&nbsp;插线板</a><span>&gt;</span>
+                        </li>
+                        <li>
+                            <li><a href="#">出行&nbsp;穿戴</a><span>&gt;</span>
+                        </li>
+                        <li>
+                            <li><a href="#">智能&nbsp;路由器</a><span>&gt;</span>
+                        </li>
+                        <li>
+                            <li>
+                                <a href="#">电源&nbsp;配件</a>
+                                <span>&gt;</span>
+                        </li>
+                        <li>
+                            <li>
+                                <a href="#">个护&nbsp;儿童</a>
+                                <span>&gt;</span>
+                        </li>
+                        <li>
+                            <li>
+                                <a href="#">耳机&nbsp;音响</a>
+                                <span>&gt;</span>
+                        </li>
+                        <li>
+                            <li>
+                                <a href="#">生活&nbsp;箱包</a>
+                                <span>&gt;</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
 
         </div>
 
-        <div class="lunbo"></div>
+        <div class="lunbo">
+            <a href="#">
+                <img src="images/lunbo.jpg">
+            </a>
+
+        </div>
     </div>
 
     <div class="shop">
         <!--选购引导-->
         <div class="channel">
 
+                <ul>
+                    <li>
+                        <a href="#"><span></span>选购手机</a>
+                    </li>
+                    <li>
+                        <a href="#"><span></span>企业团购</a>
+                    </li>
+                    <li>
+                        <a href="#"><span></span>F码通道</a>
+                    </li>
+                    <li>
+                        <a href="#"><span></span>米粉卡</a>
+                    </li>
+                    <li>
+                        <a href="#"><span></span>以旧换新</a>
+                    </li>
+                    <li>
+                        <a href="#"><span></span>花费充值</a>
+                    </li>
+                </ul>
+
+
+
         </div>
         <div class="advertising">
             <ul>
-                <li>手机</li>
-                <li>运动手表</li>
-                <li>小米音响</li>
+                <li>
+                    <a href="#">
+                        <img alt="mix 2s 最高减400" src="./images/lunbo1.jpg">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img alt="mix 2s 最高减400" src="./images/lunbo2.jpg">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img alt="mix 2s 最高减400" src="./images/lunbo3.jpg">
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
