--- a/Python全栈开发中级/第五模块/04 jquery/02 jquery事件/08 jquery-focus.html
+++ b/Python全栈开发中级/第五模块/04 jquery/02 jquery事件/08 jquery-focus.html
@@ -9,7 +9,7 @@
     <script>
         $(document).ready(function () {
             $("input").focus(function () {
-                $(this).css("background-color","#cccccc");
+                $(this).css("background-color","#ccc");
 
             });
             $("input").blur(function () {
