--- a/作业/第十二次作业/抽屉新热榜/index.html
+++ b/作业/第十二次作业/抽屉新热榜/index.html
@@ -722,9 +722,77 @@
 
                 </div>
 
+                <!--分页-->
+                <nav aria-label="Page navigation" style="text-align:center">
+                    <ul class="pagination">
+                        <li>
+                            <a href="#" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
+                        <li><a href="#">1</a> </li>
+                        <li class="active"><a href="#">2</a> </li>
+                        <li><a href="#">3</a> </li>
+                        <li><a href="#">4</a> </li>
+                        <li><a href="#">5</a> </li>
+                        <li>
+                            <a href="#" aria-hidden="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+
+            </div>
+            <!--右侧列表内容-->
+            <div class="col-md-4">
+                <div class="my-a-img">
+                    <a href="#"><img src="images/report.png" alt=""></a>
+                    <a href="#"><img src="images/report_children.png" alt=""></a>
+                </div>
+
+                <a href="#">如何避免自己被封号</a>
+
+                <a href="#"><img src="images/homepage_download.png" alt=""></a>
+
+                <div><span class="my-span-top">24小时全部<span> TOP 10</span></span> </div>
+
+                <!--面板链接 ul li 内容-->
+                <div class="panel panel-default my-panel">
+
+                    <div class="panel-heading">最热榜</div>
+
+                    <!--List group-->
+                    <ul class="list-group my-list-group">
+                        <li class="list-group-item">
+                            <span class="badge">123</span>
+                            <a href="https://dig.chouti.com/link/21608756">我败了，五十一岁的周慧敏</a>
+                        </li>
+                        <li class="list-group-item">
+                            <span class="badge">108</span>
+                            <a href="https://dig.chouti.com/link/21615181">告诉你们今天打破了尘封了十年的【女子50米仰泳】世界纪录的刘湘，颜值也一直都在线上，没下来过哟（@kristyiiii）</a>
+                        </li>
+                        <li class="list-group-item">
+                            <span class="badge">321</span>
+                            <a href="https://dig.chouti.com/link/21606311">瞒天过海：美人计 Ocean's Eight (2018) Oceans.8.2018.1080p.WEB-DL.H264.AC3-EVO.mkv</a>
+                        </li>
+                        <li class="list-group-item">
+                            <span class="badge">188</span>
+                            <a href="https://dig.chouti.com/link/21605521">#人生狗汤# 没有什么比看到自己夺冠更兴奋的了，我们和狗子的区别只是更会掩饰一些</a>
+                        </li>
+                        <li class="list-group-item">
+                            <span class="badge">220</span>
+                            <a href="https://dig.chouti.com/link/21607266">她们把《西游记》序曲编成了舞蹈</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <!--广告图片-->
+                <a href="#"><img src="images/img-footer.jpg" alt=""></a>
             </div>
         </div>
     </div>
+
     <!--回到顶部图标-->
     <div class="move-top" title="回到顶部"></div>
 
